# code-size-counter

./: .flake8  LICENSE  README.md  code_size_counter.py  file_tools.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  python-app.yml
code_size_counter/: code_size_counter.py  file_tools.py  main.py
source_code_size_counter/: code_size_counter.py  file_tools.py
src/: code_size_counter.py  file_tools.py  main.py
tests/: test_code_size_counter.py
tests/complex-test-dir/: README.md  code_size_counter.py
tests/complex-test-dir/.github/workflows/: python-app.yml
tests/complex-test-dir/src/: code_size_counter.py
tests/complex-test-dir/tests/: test_code_size_counter.py
tests/complex-test-dir/virtualenv/: pyvenv.cfg
tests/complex-test-dir/virtualenv/Scripts/: activate  activate.bat
tests/no-matching-files-test-dir/dir-py/: main.py
tests/no-matching-files-test-dir/dir-txt/: a.txt
tests/no-matching-files-test-dir/dir-txt/dir/: c.txt
tests/simple-test-dir/: a.txt  b.txt
tests/simple-test-dir/dir/: c.txt
