[tool.poetry]
name = "code-size-counter"
version = "1.0"
description = "Command line utility used for calculating total size (both KB and lines of code) of program's code."
authors = ["Vojtěch Lengál <vojta.lengal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
black = "^23.11.0"
prettytable = "^3.9.0"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
